--- a/board.html
+++ b/board.html
@@ -61,6 +61,7 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
+    <div class="addTastBoard d-none"  w3-include-html="assed/template/task_form.html"></div>
 
 
     <div></div>
