--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
 </head>
 
-<body>
+<body onload="initContact()"> 
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/contact_site.html"></div>
