--- a/addtask.html
+++ b/addtask.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body onload="initnewTask()">
   <div w3-include-html="assed/template/header.html"></div>
   <div w3-include-html="assed/template/sidebar.html"></div>
   <!-- Input Task Fields -->
