addContact.html ans addContact.css Style almost ready

--- a/addContact.html
+++ b/addContact.html
@@ -104,12 +104,12 @@
                 <div class="contact-sidebar-txt-1">Add Contact</div>
                 <div class="contact-sidebar-txt-2">Tasks are better whith a team</div>
                 <div class="contact-sidebar-graphic">
-                    <img src="assed/svg/contact-imgs/Vector 5(1).svg" alt="" class="contact-sidebar-graphic-img">
+                    <img src="assed/svg/contact-imgs/Vector 5(2).svg" alt="" class="contact-sidebar-graphic-img">
                 </div>
             </div>
 
             <div class="contact-sidebar-logo-div">
-
+                <img src="assed/svg/contact-imgs/Capa 1.svg" alt="" class="contact-sidebar-logo">
             </div>
         </div>
         
