CSS, Sing In Site, Delet Task

--- a/addContact.html
+++ b/addContact.html
@@ -13,6 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
 
     <!-- BOOTSTARP LINKS -->
@@ -29,7 +33,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    
+
     <!-- JS-functions -->
     <script src="js/addContact.js"></script>
     <script src="js/storage.js"></script>
@@ -112,7 +116,7 @@
                 <img src="assed/svg/contact-imgs/Capa 1.svg" alt="" class="contact-sidebar-logo">
             </div>
         </div>
-        
+
 
     </div>
 
