--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <!-- customize Font -->
 
@@ -49,7 +53,7 @@
 
 </head>
 
-<body onload="initContact()"> 
+<body onload="initContact()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/contact_site.html"></div>
@@ -58,7 +62,7 @@
     <div w3-include-html="addContact.html"></div>
 
 
-    
+
 
     <script>
         includeHTML();
