--- a/board.html
+++ b/board.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
     <link rel="stylesheet" type="text/css" href="/css/board.css">
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <!-- customize Font -->
 
@@ -45,9 +49,9 @@
         <script src="script.js"></script>
         <script src="js/add_task.js"></script>
         <script src="js/storage.js"></script>
-        
+
         <script src="/js/draggable-akademie.js"></script>
-        
+
 
 
         <!-- Favivon -->
@@ -61,7 +65,7 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
-    <div class="addTastBoard d-none"  w3-include-html="assed/template/task_form.html"></div>
+    <div class="addTastBoard d-none" w3-include-html="assed/template/task_form.html"></div>
 
 
     <div></div>
