some minor changes to 'contact.html' and 'addContact.css

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
     <script src="script.js"></script>
     <script src="/js/addContact.js"></script>
     <script src="/js/storage.js"></script>
+    <script src="/js/editContact.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
