--- a/addContact.html
+++ b/addContact.html
@@ -38,6 +38,7 @@
     <script src="js/addContact.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/editContact.js"></script>
+    <script src="js/edit-add-Contact-CSS-functions.js"></script>
 
 
 
@@ -79,7 +80,7 @@
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
 
-            <button onclick="removeContact(), addContact(), closeAddContactOverlay()" class="create-contact-btn">
+            <button onclick="removeContact(), addContact(), closeAddContactOverlay()" class="save-edits-contact-btn">
                 <div class="create-contact-txt">Save</div>
                 <div class="create-contact-bounding-box-img">
                     <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
