add_task erweitert, board alle informationen

--- a/summary.html
+++ b/summary.html
@@ -57,7 +57,7 @@
     <div class="summary_content">
         <!--Div for Join Logo-->
         <div>
-            <img src="/assed/svg/join_summary_logo.svg" style="width: 625px; height: 73px;" alt="" srcset="">
+            <img src="/assed/svg/join_summary_logo.svg" style="width: 625px; height: 73px;padding-left: 243px;" alt="" srcset="">
         </div>
         <!--Div for content Tables-->
         <div class="summary_cards">
