addContact-overlay responsive

--- a/addContact.html
+++ b/addContact.html
@@ -7,6 +7,7 @@
     <title>Add Contact</title>
 
     <link rel="stylesheet" type="text/css" href="/css/addContact.css">
+    <link rel="stylesheet" href="/css/addContactResponsive.css">
 
     <!-- customize Font -->
 
