add-contact-overlay ready

--- a/addContact.html
+++ b/addContact.html
@@ -75,8 +75,8 @@
 
 
         <!-- Buttons for edit contact option -->
-        <div id="edit-contact" class="cancel-create-contact d-none">
-            <button onclick="emptyInputfields() ,closeAddContactOverlay(), removeContact()" class="cancel-btn">
+        <div id="edit-contact" class="edit-contact d-none">
+            <button onclick="emptyInputfields() ,closeAddContactOverlay(), removeContact()" class="delete-btn">
                 <div class="cancel-btn-txt">Delete</div>
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
@@ -84,7 +84,7 @@
             <button onclick="removeContact(), addContact(), closeAddContactOverlay()" class="save-edits-contact-btn">
                 <div class="create-contact-txt">Save</div>
                 <div class="create-contact-bounding-box-img">
-                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
+                    <img src="assed/svg/contact-imgs/check.svg" alt="" class="save-edits-contact-img">
                 </div>
             </button>
         </div>
