--- a/board.html
+++ b/board.html
@@ -51,12 +51,9 @@
         <script src="js/storage.js"></script>
 
         <script src="/js/draggable-akademie.js"></script>
-
-
-
         <!-- Favivon -->
 
-        <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+        <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
