--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <script src="js/edit-add-Contact-CSS-functions.js"></script>
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
 
 
 
