--- a/singup.html
+++ b/singup.html
@@ -50,7 +50,7 @@
 
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
