add the add task overfly for board html

--- a/addtask.html
+++ b/addtask.html
@@ -55,6 +55,9 @@
   <div w3-include-html="assed/template/sidebar.html"></div>
   <!-- Input Task Fields -->
   <div w3-include-html="assed/template/task_form.html"></div>
+  <div class="d-none">
+    <div w3-include-html="assed/template/task_form.html"></div>
+  </div>
 
   <script>
     includeHTML();
