--- a/board.html
+++ b/board.html
@@ -62,7 +62,9 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
-    <div class="addTastBoard d-none" w3-include-html="assed/template/task_form.html"></div>
+    <div class="floating-add-task-backlog-v-1 d-none"id="taskAddFormInBaord">
+        <div  w3-include-html="assed/template/task_form.html" ></div>
+    </div>
 
 
     <div></div>
