--- a/assed/notUsed/board.html
+++ b/assed/notUsed/board.html
@@ -49,8 +49,7 @@
         <script src="script.js"></script>
         <script src="js/add_task.js"></script>
         <script src="js/storage.js"></script>
-
-        <script src="/js/draggable-akademie.js"></script>
+        <script src="js/draggable-akademie.js"></script>
         <!-- Favivon -->
 
         <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
