--- a/assed/notUsed/contact.html
+++ b/assed/notUsed/contact.html
@@ -62,7 +62,7 @@
     <div w3-include-html="assed/template/contact_site.html"></div>
     <!-- <div id="allContact" w3-include-html="assed/template/contact_site.html"></div> -->
     <!-- <div w3-include-html="assed/template/add_new_contact.html"></div> -->
-    <div w3-include-html="addContact.html"></div>
+    <div w3-include-html="assed/template/addContact.html"></div>
 
 
 
