--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 </head>
 
-<body onload="init()">
+<body onload="initusers()">
     <div class="loginLogo">
         <div class="logoJoin" id="login-container-overlay">
             <div style="width: 274px; height: 334.07px; position: relative" id="loading-logo">
