--- a/summary.html
+++ b/summary.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary</title>
-
+    <title>Join</title>
     <!-- customize Stylefiles-->
+    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
+    <link rel="stylesheet" type="text/css" href="/css/addContactResponsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/addtask.css">
+    <link rel="stylesheet" type="text/css" href="/css/board.css">
     <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
     <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- customize Font -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-
-
     <!-- customize Scripts -->
     <script src="script.js"></script>
+    <script src="js/add_task.js"></script>
+    <script src="js/addContact.js"></script>
+    <script src="js/draggable-akademie.js"></script>
+    <script src="js/edit-add-Contact-CSS-functions.js"></script>
+    <script src="js/editContact.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/summary.js"></script>
-    <script src="js/add_task.js"></script>
 
-
+    <script src="js/user.js"></script>
     <!-- Favivon -->
-
     <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
 </head>
-
-<body onload="initSummary()">
+<body onload="init()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div id="summary-content" w3-include-html="assed/template/summary_content.html"></div>
-
+    <div id="contact-content" class="d-none" w3-include-html="assed/template/contact_site.html"></div>
+            <div w3-include-html="addContact.html"></div>
+    <div id="task-content" class="d-none" w3-include-html="assed/template/task_form.html"></div>
+    <div id="board-content" class="d-none" w3-include-html="assed/template/draggablecards.html"></div>
+        <div class="floating-add-task-backlog-v-1 d-none"id="taskAddFormInBaord">
+            <div  w3-include-html="assed/template/task_form.html" ></div>
+        </div>
+    <!--Datenschutz, Impressum ....-->
+    <div id="datenschutz-content" class="d-none" w3-include-html="assed/template/datenschutz.html"></div>
     <!--Content DIV-->
-
-
     <script>
         includeHTML();
     </script>
 </body>
-
-
-
 </html>
