--- a/summary.html
+++ b/summary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-    <!-- customize Stylefiles-->
+    <!-- customize Stylefiles -->
     <link rel="stylesheet" type="text/css" href="/css/addContact.css">
     <link rel="stylesheet" type="text/css" href="/css/addContactResponsive.css">
     <link rel="stylesheet" type="text/css" href="/css/addtask.css">
@@ -16,13 +16,10 @@
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+    <!-- google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <!-- customize Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <!-- customize Scripts -->
     <script src="script.js"></script>
     <script src="js/add_task.js"></script>
