design much better, function update add_task

--- a/board.html
+++ b/board.html
@@ -15,45 +15,48 @@
     <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
     <link rel="stylesheet" type="text/css" href="/css/board.css">
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+    <link rel="stylesheet" type="text/css" href="/css/addContact.css">
+    <link rel="stylesheet" type="text/css" href="/css/addtask.css">
+    <link rel="stylesheet" href="/css/addContactResponsive.css">
+
+    <!-- customize Font -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-
-    <!-- customize Font -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 
 
-    < <!-- BOOTSTARP LINKS -->
-        <!-- Latest compiled and minified CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- BOOTSTARP LINKS -->
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
-            integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ"
-            crossorigin="anonymous" />
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous" />
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-        <!-- Include Draggable Library -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <!-- Include Draggable Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.1/draggable.bundle.legacy.min.js"></script>
 
 
-        <!-- customize Scripts -->
-        <script src="script.js"></script>
-        <script src="js/add_task.js"></script>
-        <script src="js/storage.js"></script>
+    <!-- customize Scripts -->
+    <script src="script.js"></script>
+    <script src="js/add_task.js"></script>
+    <script src="js/storage.js"></script>
 
-        <script src="/js/draggable-akademie.js"></script>
-        <!-- Favivon -->
+    <script src="/js/draggable-akademie.js"></script>
+    <!-- Favivon -->
 
-        <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
 
 
 </head>
@@ -62,9 +65,9 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
-    <div class="floating-add-task-backlog-v-1 d-none"id="taskAddFormInBaord">
-        <div  w3-include-html="assed/template/task_form.html" ></div>
-        
+    <div class="floating-add-task-backlog-v-1 d-none" id="taskAddFormInBaord">
+        <div w3-include-html="assed/template/task_form.html"></div>
+
     </div>
 
 
