--- a/summary.html
+++ b/summary.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 
-    < <!-- BOOTSTARP LINKS -->
+    <!-- BOOTSTARP LINKS -->
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -47,8 +47,7 @@
     <script src="js/storage.js"></script>
     <script src="js/summary.js"></script>
     <script src="js/add_task.js"></script>
-
-
+    
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/favicon.svg" type="image/svg+xml">
