--- a/addtask.html
+++ b/addtask.html
@@ -12,7 +12,12 @@
   <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
+  <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
+  <link rel="stylesheet" type="text/css" href="/css/board.css">
+  <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
+  <link rel="stylesheet" type="text/css" href="/css/addContact.css">
   <link rel="stylesheet" type="text/css" href="/css/addtask.css">
+  <link rel="stylesheet" href="/css/addContactResponsive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
