add task and its flyover finalized

--- a/addtask.html
+++ b/addtask.html
@@ -59,7 +59,7 @@
   <div w3-include-html="assed/template/header.html"></div>
   <div w3-include-html="assed/template/sidebar.html"></div>
   <!-- Input Task Fields -->
-  <div w3-include-html="assed/template/task_form.html"></div>
+  <div class="addTaskHtml" w3-include-html="assed/template/task_form.html"></div>
 
   <script>
     includeHTML();
