detail few of the task, some corrections

--- a/board.html
+++ b/board.html
@@ -71,6 +71,7 @@
             <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img" />
         </div>
     </div>
+    <div id="fullTask" class="floatingTask d-none" w3-include-html="assed/template/fullTask.html"></div>
 
 
     <div></div>
