start whith default-contact responsive

--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,7 @@
     <!-- <div id="allContact" w3-include-html="assed/template/contact_site.html"></div> -->
     <!-- <div w3-include-html="assed/template/add_new_contact.html"></div> -->
     <div w3-include-html="addContact.html"></div>
+    <div w3-include-html="assed/template/header_mobile.html"></div>
 
 
 
