--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
-        <link rel="stylesheet" href="/css/addContactResponsive.css">
+    <link rel="stylesheet" href="/css/addContactResponsive.css">
+    <link rel="stylesheet" href="/css/header_mobile.css">
 
     <!-- customize Font -->
 
