--- a/addtask.html
+++ b/addtask.html
@@ -47,6 +47,7 @@
   <script src="script.js"></script>
   <script src="js/add_task.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/draggable-akademie.js"></script>
 
   <!-- Favivon -->
 
