responsive version of sidebar ready

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="/css/contactsDefault.css">
     <link rel="stylesheet" href="/css/addContactResponsive.css">
     <link rel="stylesheet" href="/css/header_mobile.css">
+    <link rel="stylesheet" href="/css/sidebar_mobile.css">
 
     <!-- customize Font -->
 
@@ -70,6 +71,7 @@
     <!-- <div w3-include-html="assed/template/add_new_contact.html"></div> -->
     <div w3-include-html="addContact.html"></div>
     <div w3-include-html="assed/template/header_mobile.html"></div>
+    <div w3-include-html="assed/template/sidebar_mobile.html"></div>
 
 
 
