--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/addContactResponsive.css">
     <link rel="stylesheet" href="/css/header_mobile.css">
     <link rel="stylesheet" href="/css/sidebar_mobile.css">
+    <link rel="stylesheet" href="/css/addContact.css">
 
     <!-- customize Font -->
 
@@ -35,8 +36,8 @@
 
     <!-- BOOTSTARP LINKS -->
     <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
