--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
 
     <!-- customize Stylefiles-->
+    <link rel="stylesheet" type="text/css" href="/css/general_css_classes.css">
     <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
     <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
