--- a/addContact.html
+++ b/addContact.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Contact</title>
 
+    <link rel="stylesheet" type="text/css" href="/css/general_css_classes.css">
     <link rel="stylesheet" type="text/css" href="/css/addContact.css">
     <link rel="stylesheet" href="/css/addContactResponsive.css">
+    
 
     <!-- customize Font -->
 
@@ -50,7 +52,7 @@
 
 <body>
 
-    <div id="overlay-add-contact" class="overlay-add-contact-outer-div d-none">
+    <div id="overlay-add-contact" class="overlay-add-contact-outer-div display-none">
         <div class="overlay-add-contact">
             <div onclick=" emptyInputfields(),closeAddContactOverlay(), showCreateContactBtns(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove')" class="close-div">
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
@@ -76,7 +78,7 @@
 
 
             <!-- Buttons for edit contact option -->
-            <div id="edit-contact" class="edit-contact d-none">
+            <div id="edit-contact" class="edit-contact display-none">
                 <button onclick="emptyInputfields() ,closeAddContactOverlay(), removeContact()" class="delete-btn">
                     <div class="cancel-btn-txt">Delete</div>
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
