--- a/addContact.html
+++ b/addContact.html
@@ -54,7 +54,7 @@
 
     <div id="overlay-add-contact" class="overlay-add-contact-outer-div display-none">
         <div class="overlay-add-contact">
-            <div onclick=" emptyInputfields(),closeAddContactOverlay(), showCreateContactBtns(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove')" class="close-div">
+            <div onclick=" emptyInputfields(),closeAddContactOverlay(), showCreateContactBtns(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove')" class="close-div">
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
             </div>
 
@@ -68,7 +68,7 @@
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
-                <button onclick="addContact(), closeAddContactOverlay(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove')" class="create-contact-btn">
+                <button onclick="addContact(), closeAddContactOverlay(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayNone('show-contact', 'add')" class="create-contact-btn">
                     <div class="create-contact-txt">Create contact</div>
                     <div class="create-contact-bounding-box-img">
                         <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
@@ -79,12 +79,12 @@
 
             <!-- Buttons for edit contact option -->
             <div id="edit-contact" class="edit-contact display-none">
-                <button onclick="emptyInputfields() ,closeAddContactOverlay(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), removeContact()" class="delete-btn">
+                <button onclick="emptyInputfields() ,closeAddContactOverlay(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), removeContact()" class="delete-btn">
                     <div class="cancel-btn-txt">Delete</div>
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
-                <button onclick="removeContact(), addContact(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), closeAddContactOverlay()"
+                <button onclick="removeContact(), addContact(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), closeAddContactOverlay()"
                     class="save-edits-contact-btn">
                     <div class="create-contact-txt">Save</div>
                     <div class="create-contact-bounding-box-img">
