--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/header_mobile.css">
     <link rel="stylesheet" href="/css/sidebar_mobile.css">
     <link rel="stylesheet" href="/css/addContact.css">
+    <link rel="stylesheet" href="/css/contact_created_responsive.css">
 
     <!-- customize Font -->
 
@@ -74,6 +75,7 @@
     <div w3-include-html="addContact.html"></div>
     <div w3-include-html="assed/template/header_mobile.html"></div>
     <div w3-include-html="assed/template/sidebar_mobile.html"></div>
+    <div w3-include-html="assed/template/contact_created_responsive"></div>
 
 
 
