--- a/addContact.html
+++ b/addContact.html
@@ -68,7 +68,7 @@
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
-                <button onclick="addContact(), closeAddContactOverlay(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayNone('show-contact', 'add'), displayNone('generalcontacts-frame97', 'add'), displayNone('overlay-add-contact', 'remove')" class="create-contact-btn">
+                <button onclick="addContact(), closeAddContactOverlay(), displayNone('add-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove')" class="create-contact-btn">
                     <div class="create-contact-txt">Create contact</div>
                     <div class="create-contact-bounding-box-img">
                         <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
@@ -79,7 +79,7 @@
 
             <!-- Buttons for edit contact option -->
             <div id="edit-contact" class="edit-contact display-none">
-                <button onclick="emptyInputfields() ,closeAddContactOverlay(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), removeContact()" class="delete-btn">
+                <button onclick="emptyInputfields() ,closeAddContactOverlay(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayFlex('show-contact', 'remove'), removeContact()" class="delete-btn">
                     <div class="cancel-btn-txt">Delete</div>
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
