--- a/addContact.html
+++ b/addContact.html
@@ -84,7 +84,7 @@
                     <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
                 </button>
 
-                <button onclick="removeContact(), addContact(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), closeAddContactOverlay()"
+                <button onclick="removeContact(), addContact(), displayNone('edit-contact', 'add'), displayNone('cancel-create-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'remove'), displayNone('contacts', 'remove'), displayFlex('show-contact', 'remove'), closeAddContactOverlay()"
                     class="save-edits-contact-btn">
                     <div class="create-contact-txt">Save</div>
                     <div class="create-contact-bounding-box-img">
