responsive header and sidebar implemented to all pages

--- a/board.html
+++ b/board.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
     <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/header_mobile.css">
+    <link rel="stylesheet" href="/css/sidebar_mobile.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
     <link rel="stylesheet" type="text/css" href="/css/draggablecards.css">
@@ -64,6 +66,8 @@
 <body onload="updateHTML()">
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
+    <div w3-include-html="assed/template/header_mobile.html"></div>
+    <div w3-include-html="assed/template/sidebar_mobile.html"></div>
     <div w3-include-html="assed/template/draggablecards.html"></div>
     <div class="floating-add-task-backlog-v-1 d-none" id="taskAddFormInBaord">
         <div style="all: unset;" w3-include-html="assed/template/task_form.html"></div>        
