--- a/summary.html
+++ b/summary.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
     <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/css/header_mobile.css">
+    <link rel="stylesheet" href="/css/sidebar_mobile.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,6 +59,8 @@
     <div w3-include-html="assed/template/header.html"></div>
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div id="summary-content" w3-include-html="assed/template/summary_content.html"></div>
+    <div w3-include-html="assed/template/header_mobile.html"></div>
+    <div w3-include-html="assed/template/sidebar_mobile.html"></div>
 
     <!--Content DIV-->
 
